[package]
name = "gt_qd_orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.17", features = ["native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = { version = "2", features = ["serde"] }
